@@ -244,6 +244,7 @@
 						--add-opens io.github.mtrevisan.boxon/io.github.mtrevisan.boxon.core=spring.core,ALL-UNNAMED
 						--add-opens io.github.mtrevisan.boxon/io.github.mtrevisan.boxon.core.codecs=ALL-UNNAMED
 						--add-opens io.github.mtrevisan.boxon/io.github.mtrevisan.boxon.core.codecs.queclink=spring.core,spring.expression
+						--add-opens io.github.mtrevisan.boxon/io.github.mtrevisan.boxon.core.codecs.teltonika=spring.core,spring.expression
 						--add-opens io.github.mtrevisan.boxon/io.github.mtrevisan.boxon.core.helpers=ALL-UNNAMED
 						--add-opens io.github.mtrevisan.boxon/io.github.mtrevisan.boxon.core.parsers=spring.core,ALL-UNNAMED
 						--add-opens io.github.mtrevisan.boxon/io.github.mtrevisan.boxon.core.parsers.matchers=ALL-UNNAMED
